# nnui-1

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-release.bat  build-release.sh  build.bat  build.sh
.github/workflows/: ci.yml  pr_clear_cache.yml
ext/tinyfiledialogs/: CMakeLists.txt  tinyfiledialogs.h
src/: application.cc  application.h  astar.cc  astar.h  main.cc  main.cpp
src/common/: definitions.cc  definitions.h  grid.cc  grid.h  logger.cc  logger.h
src/pathfinding/: algorithm.cc  algorithm.h  state.cc  state.h
src/ui/: bitmap-panel.cc  bitmap-panel.h  maze-canvas.cc  maze-canvas.h  maze-panel.cc  maze-panel.h  maze-update.cc  maze-update.h  my-frame.cc  my-frame.h
